--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,15 @@
-requests==2.26.0
+certifi==2021.10.8
+charset-normalizer==2.0.10
+click==8.0.3
+click-default-group==1.2.2
+idna==3.3
+numpy==1.22.0
 pandas==1.3.5
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.26.0
+six==1.16.0
+sqlite-fts4==1.0.1
+sqlite-utils==3.19
+tabulate==0.8.9
+urllib3==1.26.7
